# SimpleEventDispatcher

./: .gitignore  CMakeLists.txt  EventManager.hpp  README.md  main.cpp
